[package]
name = "rstis"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
web-sys = { version = "0.3.77", features = ["CustomEvent", "CustomEventInit", "HtmlElement"] }
yew = { version="0.21", features=["csr"] }
